samples/_failures_safe/1761282242_3cbae7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f13a862a.c: In function ‘main’:
./samples/SAFE/__tmp_f13a862a.c:141:5: error: expected expression at end of input
  141 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_f13a862a.c:141:5: error: expected declaration or statement at end of input
